# Rhok-zan

./: .gitignore  Cargo.toml  LICENSE - MIT  README.md  flake.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 0xbni69flk8380w0apw4h640n37wn1i9-source  apb4i2j2x42ii04wk5gq3b28h7kafff7-source
Licenses/: MIT
src/: circuit.rs  lib.rs  main.rs  signal.rs  uuid.rs
src/back_end/: mod.rs
src/back_end/circuit/: mod.rs
src/back_end/circuit/builder/: mod.rs
src/back_end/circuit/operation/: mod.rs
src/back_end/circuit/signal/: mod.rs
src/circuit/: mod.rs
src/circuit/operation/: mod.rs
src/compiler/: mod.rs
src/front_end/: mod.rs
src/inerpreter/: mod.rs
src/inerpreter/ast_gen/: mod.rs
src/inerpreter/graph_gen/: mod.rs
src/inerpreter/graph_gen/constructs/: mod.rs
src/inerpreter/graph_gen/rust/: mod.rs
src/inerpreter/tokenizer/: mod.rs
src/interface/: gui.rs  mod.rs
src/interface/gui/: mod.rs  tiny_parse.rs  vizualizer.rs
src/interpreter/: mod.rs
src/interpreter/file_ops/: mod.rs
src/interpreter/gld_compiler/: mod.rs
src/interpreter/graph_gen/: mod.rs
src/interpreter/hdl_tokenizer/: mod.rs
src/interpreter/input_gen/: mod.rs
src/interpreter/rtl_compiler/: mod.rs
src/middle_end/netlist/: cell_types.rs  mod.rs
src/sim/: mod.rs
src/sim/circuit/: mod.rs
src/synth/: mod.rs  netlist.rs
src/synth/AST/: mod.rs  system_verilog.rs
src/synth/SSA/: cell_types.rs  mod.rs
src/synth/hdl_parser/: mod.rs
src/user_interface/: mod.rs
(+15 files in other folders)
