[package]
name = "Rhok-zan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [patch.crates-io]
# mlir-sys = { git = "https://github.com/nadaso8/mlir-sys-nixos.compat.git" }

[dependencies]
eframe = "0.30.0"
nom = "8.0.0"
petgraph = "0.6"
rayon = "1.8.1"
